feat: Create AudioDataBuffer interface and implement it for a file